bugfix(break words): stop overflow of flex items

--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -8,8 +8,11 @@
   display: flex
 
   div
-    padding: 20px
+    padding: 20px 40px 20px 20px
     flex: 1 1 auto
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
 
   &.theme--secondary
     background: $brand-secondary
